Fix help-notice spacing in call-to-action
When a help-notice element is used inside a call-to-action an excessive space is created as the padding of the outer element adds to the margin of the inner element. This change reduces this excessive space by removing the margin-top on the inner element if it is the first element within the call-to-action container.

Update _warning-callout.scss

--- a/app/assets/stylesheets/govuk_publishing_components/components/govspeak/_warning-callout.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/govspeak/_warning-callout.scss
@@ -34,4 +34,11 @@
       margin-left: 1em;
     }
   }
+
+  // Prevent excessive spacing when placed in a call-to-action block
+  .call-to-action {
+    .help-notice:first-child {
+      margin-top: 0;
+    }
+  }
 }
